--- a/public/registro_proveedor.css
+++ b/public/registro_proveedor.css
@@ -104,3 +104,10 @@ button[type="submit"]:hover {
 .login-link a:hover {
     text-decoration: underline;
 }
+
+.error-text {
+    color: red;
+    font-size: 0.9em;
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
